// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoAreaField renders empty field when no initial data 1`] = `
[
  <input
    name="react"
    type="hidden"
    value={true}
  />,
  <div
    className="govuk-radios"
  >
    <div
      className="govuk-radios__item"
    >
      <input
        checked={true}
        className="govuk-radios__input"
        id="erga_omnes"
        name="geographical_area-geo_area"
        onChange={[Function]}
        type="radio"
        value="ERGA_OMNES"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="erga_omnes"
      >
        All countries (erga omnes)
      </label>
    </div>
    <div
      className="govuk-radios__conditional"
    >
      <div
        className="govuk-form-group"
        data-testid="erga_omnes_exclusions_select"
      >
        <div
          className="govuk-hint"
        >
          Select one or more countries to be excluded:
        </div>
        <div
          className="react-select-container css-b62m3t-container"
          id="erga_omnes_exclusions_select"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-4-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            className="react-select__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="react-select__value-container react-select__value-container--is-multi css-1fdsijx-ValueContainer"
            >
              <div
                className="react-select__placeholder css-1jqq78o-placeholder"
                id="react-select-4-placeholder"
              >
                Select...
              </div>
              <div
                className="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-describedby="react-select-4-placeholder"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="react-select__input"
                  disabled={false}
                  id="react-select-4-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className="react-select__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="geographical_area-erga_omnes_exclusions"
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        checked={false}
        className="govuk-radios__input"
        id="group"
        name="geographical_area-geo_area"
        onChange={[Function]}
        type="radio"
        value="GROUP"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="group"
      >
        A group of countries
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        checked={false}
        className="govuk-radios__input"
        id="country"
        name="geographical_area-geo_area"
        onChange={[Function]}
        type="radio"
        value="COUNTRY"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="country"
      >
        Specific countries or regions
      </label>
    </div>
  </div>,
]
`;

exports[`GeoAreaField renders field with props 1`] = `
[
  <input
    name="react"
    type="hidden"
    value={true}
  />,
  <div
    className="govuk-radios"
  >
    <div
      className="govuk-radios__item"
    >
      <input
        checked={false}
        className="govuk-radios__input"
        id="erga_omnes"
        name="geographical_area-geo_area"
        onChange={[Function]}
        type="radio"
        value="ERGA_OMNES"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="erga_omnes"
      >
        All countries (erga omnes)
      </label>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        checked={true}
        className="govuk-radios__input"
        id="group"
        name="geographical_area-geo_area"
        onChange={[Function]}
        type="radio"
        value="GROUP"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="group"
      >
        A group of countries
      </label>
    </div>
    <div
      className="govuk-radios__conditional"
      data-testid="group_select"
    >
      <div
        className="govuk-form-group"
      >
        <div
          className="react-select-container css-b62m3t-container"
          id="group_select"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            className="react-select__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="react-select__value-container react-select__value-container--has-value css-1fdsijx-ValueContainer"
            >
              <div
                className="react-select__single-value css-1dimb5e-singleValue"
              >
                EU
              </div>
              <div
                className="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="react-select__input"
                  disabled={false}
                  id="react-select-2-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className="react-select__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="geographical_area-geographical_area_group"
            type="hidden"
            value={11}
          />
        </div>
      </div>
      <div
        className="govuk-form-group"
      >
        <div
          className="govuk-hint"
        >
          Select one or more countries to be excluded:
        </div>
        <div
          className="react-select-container css-b62m3t-container"
          id="group_exclusions_select"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-3-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            className="react-select__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-3w2yfm-ValueContainer"
            >
              <div
                className="react-select__multi-value css-1p3m7a8-multiValue"
              >
                <div
                  className="react-select__multi-value__label css-wsp0cs-MultiValueGeneric"
                >
                  Germany
                </div>
                <div
                  aria-label="Remove Germany"
                  className="react-select__multi-value__remove css-12a83d4-MultiValueRemove"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    className="css-tj5bde-Svg"
                    focusable="false"
                    height={14}
                    viewBox="0 0 20 20"
                    width={14}
                  >
                    <path
                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="react-select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="react-select__input"
                  disabled={false}
                  id="react-select-3-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                className="react-select__indicator react-select__clear-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                  />
                </svg>
              </div>
              <span
                className="react-select__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="geographical_area-geo_group_exclusions"
              type="hidden"
              value={5}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="govuk-radios__item"
    >
      <input
        checked={false}
        className="govuk-radios__input"
        id="country"
        name="geographical_area-geo_area"
        onChange={[Function]}
        type="radio"
        value="COUNTRY"
      />
      <label
        className="govuk-label govuk-radios__label"
        htmlFor="country"
      >
        Specific countries or regions
      </label>
    </div>
  </div>,
]
`;
